--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_BASE_URL=https://beat-in-blink-back-end.vercel.app/api11
+REACT_APP_API_BASE_URL=https://beat-in-blink-back-end.vercel.app/api
