--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/papaparse": "^5.3.15",
     "@types/react-dom": "^19.1.1",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
