--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
     "axios": "^1.8.4",
     "lucide-react": "^0.487.0",
     "papaparse": "^5.5.2",
@@ -10,6 +12,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "typescript": "^4.9.5",
     "uuid": "^11.1.0",
     "web-vitals": "^4.2.4"
